--- a/publication.html
+++ b/publication.html
@@ -64,7 +64,7 @@
 
 <p>
 Baochen Sun and Kate Saenko,
-<a href="https://arxiv.org/abs/1607.01719">Deep CORAL: Correlation Alignment for Deep Domain Adaptation</a>,
+<a href="https://arxiv.org/abs/1607.01719">Deep CORAL: Correlation Alignment for Deep Domain Adaptation(Extended Abstract)</a>,
 arXiv 2016.
 </p>
 
