--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 	      	<li> <font color="red">Moving to Boston University</font> Kate has recently accepted an Assistant Professor position in the 
 	      	<a href="http://www.bu.edu/cs/">Computer Science Department</a> at <a href="http://www.bu.edu/">Boston University</a>, and will be moving this summer, along with her group. Stay tuned for the new website.
 	      	</li>
-	      	<li> <font color="red">NEW:</font> <a href="https://arxiv.org/abs/1607.01719">Deep CORAL: Correlation Alignment for Deep Domain Adaptation</a>.
+	      	<li> <font color="red">NEW:</font> <a href="https://arxiv.org/abs/1607.01719">Deep CORAL: Correlation Alignment for Deep Domain Adaptation (Extended Abstract)</a>.
 	      	</li>
 	      	<li> <font color="red">NEW:</font> Two orals accepted to <a href="http://cvpr2016.thecvf.com/">CVPR 2016</a>: 
 	      	<a href="http://arxiv.org/abs/1511.05284">Deep Compositional Captioning: Describing Novel Object Categories 
