--- a/people.html
+++ b/people.html
@@ -88,7 +88,7 @@
 	      </tr>
 	      <tr>
 		<td><div>Karim Ali<br/> (Postdoc)</div></td> 
-		<td><div>Brigit Schroeder<br/> (PhD Student, now at UC Santa Cruz)</div></td> 
+		<td><div>Brigit Schroeder<br/> (Master Student, now PhD Student at UC Santa Cruz)</div></td> 
 	      </tr>
 	    </table>
 	  </div>				
