--- a/index.html
+++ b/index.html
@@ -66,8 +66,10 @@
 	  
 	    <h2>News</h2>				
 	      <ul><big>
+	        <li><font color="red">NEW:</font> Our paper titled with "Combining Texture and Shape Cues for Object Detection with Minimal Supervision" was accepted to ACCV-16.
+	      	</li>
 	      	<li><font color="red">NEW:</font> Our paper titled with 
-	      		<a href="https://arxiv.org/abs/1605.06695">Fine-to-coarse Knowledge Transfer For Low-Res Image Classification</a>
+	      		<a href="https://arxiv.org/abs/1605.06695">"Fine-to-coarse Knowledge Transfer For Low-Res Image Classification"</a>
 	      		was accepted to ICIP-16.
 	      	</li>
 	      	<li> <font color="red">Moving to Boston University</font> Kate has recently accepted an Assistant Professor position in the 
