--- a/publication.html
+++ b/publication.html
@@ -61,6 +61,16 @@
 <p>For the most up to date list, see this <a href="https://scholar.google.com/citations?hl=en&user=9xDADY4AAAAJ">Google Scholar page.</a> </p>
 
 <h2>2016</h2>
+<p>
+Xingchao Peng, Kate Saenko
+Combining Texture and Shape Cues for Object Detection with Minimal Supervision, ACCV 2016.
+</p>
+
+<p>
+Xingchao Peng, Judy Hoffman, Stella X Yu, Kate Saenko
+<a href="https://arxiv.org/abs/1605.06695">Fine-to-coarse Knowledge Transfer For Low-Res Image Classification</a>,
+ICIP 2016.
+</p>
 
 <p>
 Baochen Sun and Kate Saenko,
