--- a/publication.html
+++ b/publication.html
@@ -62,12 +62,12 @@
 
 <h2>2016</h2>
 <p>
-Xingchao Peng, Kate Saenko
+Xingchao Peng, Kate Saenko,
 Combining Texture and Shape Cues for Object Detection with Minimal Supervision, ACCV 2016.
 </p>
 
 <p>
-Xingchao Peng, Judy Hoffman, Stella X Yu, Kate Saenko
+Xingchao Peng, Judy Hoffman, Stella X Yu, Kate Saenko,
 <a href="https://arxiv.org/abs/1605.06695">Fine-to-coarse Knowledge Transfer For Low-Res Image Classification</a>,
 ICIP 2016.
 </p>
