--- a/research.html
+++ b/research.html
@@ -61,6 +61,26 @@
 
 
         <!--******************************************-->
+         <div class="publication">
+ 		<img src="figs/icip_16.jpg" class="publogo" width = "400 px" height = "160px" >
+		<p> 
+			<strong>
+			  <a href="" id="CORAL">Fine-to-Coarse Knowledge Transfer for Low-Res Image Classification</a>
+			</strong>
+			<br>
+			  Xingchao Peng, Judy Hoffman, Stella X Yu, Kate Saenko
+			<br>
+			<em>The 23rd IEEE International Conference on Image Processing, 2016 (ICIP-2016) </em>
+			<br>
+			
+			<br>
+			  <span class="links">
+		          <a href="https://arxiv.org/abs/1605.06695">arxiv</a>
+                          <a href="https://arxiv.org/abs/1607.01719">cite</a>
+		</p>
+   		<br><br><br><br>
+	</div>
+        
  	<div class="publication">
  		<img src="figs/CORAL.jpg" class="publogo" width = "400 px" height = "160px" >
 		<p> 
