--- a/research.html
+++ b/research.html
@@ -76,7 +76,7 @@
 			<br>
 			  <span class="links">
 		          <a href="https://arxiv.org/abs/1605.06695">arxiv</a>
-                          <a href="https://arxiv.org/abs/1607.01719">cite</a>
+                          <a href="citation_page/icip16_citation.html">cite</a>
 		</p>
    		<br><br><br><br>
 	</div>
