--- a/index.html
+++ b/index.html
@@ -66,6 +66,10 @@
 	  
 	    <h2>News</h2>				
 	      <ul><big>
+		<li><font color="red">NEW:</font> Our paper 
+	      		<a href="http://arxiv.org/abs/1511.05234">"Ask, Attend and Answer: Exploring Question-Guided Spatial Attention for Visual Question Answering"</a>
+	      		is accepted by ECCV2016.
+	      	</li>
 	        <li><font color="red">NEW:</font> Our paper titled with "Combining Texture and Shape Cues for Object Detection with Minimal Supervision" was accepted to ACCV-16.
 	      	</li>
 	      	<li><font color="red">NEW:</font> Our paper titled with 
