--- a/publication.html
+++ b/publication.html
@@ -61,6 +61,13 @@
 <p>For the most up to date list, see this <a href="https://scholar.google.com/citations?hl=en&user=9xDADY4AAAAJ">Google Scholar page.</a> </p>
 
 <h2>2016</h2>
+
+<p>
+Huijuan Xu, Kate Saenko,
+<a href="http://arxiv.org/abs/1511.05234">Ask, Attend and Answer: Exploring Question-Guided Spatial Attention for Visual Question Answering</a>,
+ECCV, 2016.
+</p>
+
 <p>
 Xingchao Peng, Kate Saenko,
 Combining Texture and Shape Cues for Object Detection with Minimal Supervision, ACCV 2016.
