--- a/research.html
+++ b/research.html
@@ -125,14 +125,14 @@
  		<img src="figs/VQA.png" class="publogo" width = "400 px" height = "140px" >
 		<p> 
 			<strong>
-			  <a href="" id="VQA">ASK, ATTEND AND ANSWER: EXPLOTING QUESTION-GUIDED SPATIAL ATTENTION FOR VISUAL QUESTION ANSWERING</a>
+			  <a href="http://arxiv.org/abs/1511.05234" id="VQA">ASK, ATTEND AND ANSWER: EXPLOTING QUESTION-GUIDED SPATIAL ATTENTION FOR VISUAL QUESTION ANSWERING</a>
 			</strong>
 			<br>
 			  Huijuan Xu and Kate Saenko
 			<br>
 			<!-- <em>In submission for CVPR2015</em> -->
 			  <span class="links">
-			    <a href="http://arxiv.org/pdf/1511.05234v1.pdf">arxiv</a>
+			    European Conference on Computer Vision (ECCV), 2016
            	 	  </span>
 		</p>
    		<br><br><br><br>
