--- a/research.html
+++ b/research.html
@@ -130,10 +130,9 @@
 			<br>
 			  Huijuan Xu and Kate Saenko
 			<br>
-			<!-- <em>In submission for CVPR2015</em> -->
-			  <span class="links">
-			    European Conference on Computer Vision (ECCV), 2016
-           	 	  </span>
+			<em>European Conference on Computer Vision (ECCV), 2016</em>
+			<br>
+			 
 		</p>
    		<br><br><br><br>
 	</div>
