--- a/research.html
+++ b/research.html
@@ -61,7 +61,7 @@
 
         <!--******************************************-->
  	<div class="publication">
- 		<img src="figs/VQA.png" class="publogo" width = "400 px" height = "140px" >
+ 		<img src="figs/VQA.pdf" class="publogo" width = "400 px" height = "140px" >
 		<p> 
 			<strong>
 			  <a href="http://arxiv.org/abs/1511.05234" id="VQA">ASK, ATTEND AND ANSWER: EXPLOTING QUESTION-GUIDED SPATIAL ATTENTION FOR VISUAL QUESTION ANSWERING</a>
