--- a/publication.html
+++ b/publication.html
@@ -63,9 +63,9 @@
 <h2>2016</h2>
 
 <p>
-Huijuan Xu, Kate Saenko,
-<a href="http://arxiv.org/abs/1511.05234">Ask, Attend and Answer: Exploring Question-Guided Spatial Attention for Visual Question Answering</a>,
-ECCV, 2016.
+Huijuan Xu, Kate Saenko.
+<a href="http://arxiv.org/abs/1511.05234">"Ask, Attend and Answer: Exploring Question-Guided Spatial Attention for Visual Question Answering"</a>.
+In European Conference on Computer Vision (ECCV), 2016.
 </p>
 
 <p>
