--- a/video2text.html
+++ b/video2text.html
@@ -73,7 +73,7 @@ Many core tasks in artificial intelligence require joint modeling of visual data
 <p><strong>Papers:</strong></p>
 
 <p>
-<a href="http://arxiv.org/abs/1505.05914">A Multi-scale Multiple Instance Video Description Network;</a> Huijuan Xu, Subhashini Venugopalan, Vasili Ramanishka, Marcus Rohrbach, Kate Saenko;  arXiv 2015
+<a href="http://arxiv.org/abs/1505.05914">A Multi-scale Multiple Instance Video Description Network.</a> Huijuan Xu, Subhashini Venugopalan, Vasili Ramanishka, Marcus Rohrbach, Kate Saenko. ICCV15 workshop on Closing the Loop Between Vision and Language
 </p>
 
 <p>
