--- a/index.html
+++ b/index.html
@@ -68,7 +68,8 @@
 	      <ul><big>
 		<li><font color="red">NEW:</font> Our paper 
 	      		<a href="http://arxiv.org/abs/1511.05234">"Ask, Attend and Answer: Exploring Question-Guided Spatial Attention for Visual Question Answering"</a>
-	      		is accepted to ECCV 2016.
+	      		is accepted to ECCV 2016. Here is the video spotlights:<br>
+	      		<iframe width="640" height="480" src="https://www.youtube.com/embed/FjpRwVKYJQ8?rel=0" frameborder="0" allowfullscreen></iframe>
 	      	</li>
 	        <li><font color="red">NEW:</font> Our paper titled with "Combining Texture and Shape Cues for Object Detection with Minimal Supervision" was accepted to ACCV-16.
 	      	</li>
