--- a/necv2016.html
+++ b/necv2016.html
@@ -1,85 +1,82 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<!-- saved from url=(0043)http://people.cs.umass.edu/~smaji/nevm2015/ -->
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 	
-	<title>New England Computer Vision Workshop, 2015</title>
+	<title>New England Computer Vision Workshop, 2016</title>
 	<meta name="keywords" content="New England, Computer Vision">
 	<meta name="description" content="New England Computer Vision
-	Workshop, 2015">
-	<meta name="author" content="Subhransu Maji">
-        <link href="./New England Computer Vision Workshop, 2015_files/style.css" rel="stylesheet" type="text/css">
-        <link href="./New England Computer Vision Workshop, 2015_files/css" rel="stylesheet" type="text/css">
+	Workshop, 2016">
+	<meta name="author" content="Kate Saenko">
+        <link href="./necv2015_files/style.css" rel="stylesheet" type="text/css">
+        <link href="./necv2015_files/css" rel="stylesheet" type="text/css">
 </head>
 <body style="background-color: white;">
 <div id="container">
   <div id="content">
-    <h1> New England Computer Vision Workshop,
-	2015</h1>
-    <b1>Friday, November 20, 2015</b1><br>
-    <b1>CS 150/151, <a href="https://www.cics.umass.edu/about/visiting-college">Computer Science Building, University of
-	Massachusetts, Amherst</a></b1> <br><br>
-    <img width="80%" src="./New England Computer Vision Workshop, 2015_files/chapel_fall.jpg">
+    <h1> New England Computer Vision Workshop, 2016</h1>
+    <b1> Monday, November 21, 2015</b1><br>
+    <b1> Colloquium Room, <a href="http://www.bu.edu/maps/?id=320">9th floor, 8 St. Mary’s Street, Boston</a></b1> <br><br>
+    <img width="80%" src="./bu.jpg">
 </div>
 
 <div id="content">
   <h2>Overview</h2>
   <p>
-  Welcome to the first New England Computer Vision Workshop to be held in UMass
-  Amherst. The idea is to bring together researchers in computer
+  Welcome to the second New England Computer Vision Workshop to be held at Boston University. 
+  This event brings together researchers in computer
   vision and related areas for an informal exchange of ideas through a full day of
   presentations and posters.
   </p>
   <p>
   We are expecting around 75 people from various universities and
-  industries in the New England area (<a href="https://docs.google.com/spreadsheets/d/1zX5fBCX9MSH54n4FHt4n0fapBBl1MptliRKFpBM2NPA/edit?usp=sharing">List of attendees</a>). </p>
+  industries in the New England area. 
+</p>
   
   <p> Participation is free. Please register <a href="http://goo.gl/forms/WraL4YyEVu">here</a> if you have not already
   done so.</p>
 
 
-  <h2>Schedule</h2>
+  <h2>Tentative Schedule</h2>
 
   <table cellpadding="4px">
     <tbody><tr> <td> 09:30 - 10:00 </td><td> Breakfast with coffee </td>
     </tr><tr> <td> 10:00 - 10:10 </td><td> Welcome </td>
     </tr><tr> <td> 10:10 - 12:00 </td><td> Morning talks </td>
-    </tr><tr> <td> 12:00 - 01:00 </td><td> Lunch at the <a href="http://www.umassdining.com/locations-menus/campus-center">blue wall</a> </td>
+    </tr><tr> <td> 12:00 - 01:00 </td><td> Lunch </td>
     </tr><tr> <td> 01:00 - 03:00 </td><td> Poster session (with coffee) </td>
     </tr><tr> <td> 03:00 - 05:00 </td><td> Afternoon talks </td>
   </tr></tbody></table>
 
+  <!-- 
   <p>
   Detailed schedule is <a href="https://docs.google.com/spreadsheets/d/10vexcs6lXcejChFM8uIymOBrSuspmFn_l6gTXSzCP3c/edit#gid=0">here</a>
   (updated 11/19).
   </p>
+  -->
   <h2>Getting here</h2>
   <p>
-  Follow the directions on this page:
-  <a href="https://www.cics.umass.edu/about/visiting-college">https://www.cics.umass.edu/about/visiting-college</a>
+  To get to the building, follow the directions on this page:
+  <a href="http://www.bu.edu/maps/?id=320">http://www.bu.edu/maps/?id=320</a>
   </p>
-  <p>If you are driving here, you can park your car in Lot 45, next
-  to the CS building (<a href="https://parking.umass.edu/images/maps/mapVisitorParking.pdf">MAP</a>). 
-   Directly park your car there and check in with the CS frontdesk to
-  obtain a parking permit. The permit should be displayed on your car
-  for the entire day.
+	<p> The Colloquim Room is located in the Photonics Center on the 9th floor. </p>
+	
+  <p> BU is an urban campus, and we highly encourage use of public transportation to get here. You can find transportation and driving directions 
+	  <a href="http://www.bu.edu/maps/?id=320">here</a>). 
+  
   </p>
-  <p>If you plan to come a day ahead, or want to stay an extra day, there
-  are many options in the Amherst area (<a href="http://business.amherstarea.com/list/category/lodging-243">Lodging
-  options</a>).
+  <p>If you plan to come a day ahead, or want to stay an extra day, there are many lodging options in the Boston area.
   </p>
   
   
   
   <h2>Organizers and sponsors</h2>
   <p>
-  The workshop is being organized by <a href="http://people.cs.umass.edu/~elm">Erik-Learned Miller</a> and <a href="http://people.cs.umass.edu/~smaji/">Subhransu Maji</a>,
-  and is being sponsored by :
+  The workshop is being organized by <a href="">Kate Saenko</a>, <a href="">Margrit Betke</a> and <a href="">Stan Sclaroff</a>.
+<!--  and is being sponsored by :
   </p>
   <a href="https://ds.cs.umass.edu/"><img width="375" src="./New England Computer Vision Workshop, 2015_files/cics-ds.png"></a> <img width="250" src="./New England Computer Vision Workshop, 2015_files/new-google-logo.jpg">
-
+-->
   
 </div>
-
 
 
 </div></body></html>
