--- a/necv2016.html
+++ b/necv2016.html
@@ -15,7 +15,7 @@
     <h1> New England Computer Vision Workshop, 2016</h1>
     <b1> Monday, November 21, 2015</b1><br>
     <b1> Colloquium Room, <a href="http://www.bu.edu/maps/?id=320">9th floor, 8 St. Mary’s Street, Boston</a></b1> <br><br>
-    <img width="80%" src="./bu.jpg">
+    <img width="80%" src="http://boston.university-tour.com/images/bg-image.jpg">
 </div>
 
 <div id="content">
@@ -31,7 +31,7 @@
   industries in the New England area. 
 </p>
   
-  <p> Participation is free. Please register <a href="http://goo.gl/forms/WraL4YyEVu">here</a> if you have not already
+  <p> Participation is free. Please register <a href="https://goo.gl/forms/1AC6Bn26GiIPa0mL2">here</a> if you have not already
   done so.</p>
 
 
