--- a/necv2016.html
+++ b/necv2016.html
@@ -6,8 +6,8 @@
 	<meta name="description" content="New England Computer Vision
 	Workshop, 2016">
 	<meta name="author" content="Kate Saenko">
-        <link href="./necv2015_files/style.css" rel="stylesheet" type="text/css">
-        <link href="./necv2015_files/css" rel="stylesheet" type="text/css">
+        <link href="./stylesheets/necv2016style.css" rel="stylesheet" type="text/css">
+        <link href="./stylesheets/necv2016css" rel="stylesheet" type="text/css">
 </head>
 <body style="background-color: white;">
 <div id="container">
