--- a/necv2016.html
+++ b/necv2016.html
@@ -5,7 +5,6 @@
 	<meta name="keywords" content="New England, Computer Vision">
 	<meta name="description" content="New England Computer Vision
 	Workshop, 2016">
-	<meta name="author" content="Kate Saenko">
         <link href="./stylesheets/necv2016style.css" rel="stylesheet" type="text/css">
         <link href="./stylesheets/necv2016css" rel="stylesheet" type="text/css">
 </head>
@@ -45,7 +44,7 @@
     </tr><tr> <td> 01:00 - 03:00 </td><td> Poster session (with coffee) </td>
     </tr><tr> <td> 03:00 - 05:00 </td><td> Afternoon talks </td>
   </tr></tbody></table>
-
+<br>
   <!-- 
   <p>
   Detailed schedule is <a href="https://docs.google.com/spreadsheets/d/10vexcs6lXcejChFM8uIymOBrSuspmFn_l6gTXSzCP3c/edit#gid=0">here</a>
@@ -54,23 +53,21 @@
   -->
   <h2>Getting here</h2>
   <p>
+	  The Colloquium Room is located in the Photonics Center on the 9th floor of 8 St. Mary's St. 
   To get to the building, follow the directions on this page:
   <a href="http://www.bu.edu/maps/?id=320">http://www.bu.edu/maps/?id=320</a>
   </p>
-	<p> The Colloquim Room is located in the Photonics Center on the 9th floor. </p>
 	
-  <p> BU is an urban campus, and we highly encourage use of public transportation to get here. You can find transportation and driving directions 
-	  <a href="http://www.bu.edu/maps/?id=320">here</a>). 
-  
+  <p> BU is an urban campus, and we highly encourage use of public transportation to get here. 
+	  If you need parking, please let us know in the registration form. 
   </p>
   <p>If you plan to come a day ahead, or want to stay an extra day, there are many lodging options in the Boston area.
   </p>
   
   
-  
-  <h2>Organizers and sponsors</h2>
+  <h2>Organizers</h2>
   <p>
-  The workshop is being organized by <a href="">Kate Saenko</a>, <a href="">Margrit Betke</a> and <a href="">Stan Sclaroff</a>.
+  The workshop is being organized by <a href="http://vision.cs.uml.edu/ksaenko.html">Kate Saenko</a>, <a href="http://www.cs.bu.edu/~betke/">Margrit Betke</a> and <a href="http://www.cs.bu.edu/~sclaroff/">Stan Sclaroff</a>.
 <!--  and is being sponsored by :
   </p>
   <a href="https://ds.cs.umass.edu/"><img width="375" src="./New England Computer Vision Workshop, 2015_files/cics-ds.png"></a> <img width="250" src="./New England Computer Vision Workshop, 2015_files/new-google-logo.jpg">
