--- a/people.html
+++ b/people.html
@@ -64,7 +64,7 @@
 		<td><a href="ksaenko.html"><img src="images/kate.gif" width="100" height="100"/></a></td>
 		<td><a href="http://www.cs.uml.edu/~bsun/"><img class="personal" src="images/bsun.jpg"/></a></td> 
 		<td><a href="xpeng.html"><img class="personal" src="images/default.png"/></a></td> 
-		<td><a href="huijuan.html"><img class="personal" src="images/huijuanxu.jpg"/></a></td> 
+		<td><a href="http://cs-people.bu.edu/hxu/"><img class="personal" src="images/huijuanxu.jpg"/></a></td> 
 		<td><a href="ramanishka.html"><img class="personal" src="images/default.png"/></a></td> 
 		<td><a href="#"><img class="personal" src="images/ben.jpg"/></a></td> 
 	      </tr>
