--- a/necv2016.html
+++ b/necv2016.html
@@ -30,7 +30,10 @@
   industries in the New England area. 
 </p>
   
-  <p> Participation is free. Please register <a href="https://goo.gl/forms/1AC6Bn26GiIPa0mL2">here</a> if you have not already
+  <p> 
+  Participation is free for universities (or research institutions) only; a limited number of industry spots will be made available 
+	  through sponsorship (please contact us via email). 
+  Please register <a href="https://goo.gl/forms/1AC6Bn26GiIPa0mL2">here</a> by Friday, Nov 4th if you have not already
   done so.</p>
 
 
