--- a/necv2016.html
+++ b/necv2016.html
@@ -37,7 +37,7 @@
   done so.</p>
 
 
-  <h2>Tentative Schedule</h2>
+  <h2>Schedule</h2>
 
   <table cellpadding="4px">
     <tbody><tr> <td> 09:30 - 10:00 </td><td> Breakfast with coffee </td>
@@ -48,12 +48,12 @@
     </tr><tr> <td> 03:00 - 05:00 </td><td> Afternoon talks </td>
   </tr></tbody></table>
 <br>
-  <!-- 
+  
   <p>
-  Detailed schedule is <a href="https://docs.google.com/spreadsheets/d/10vexcs6lXcejChFM8uIymOBrSuspmFn_l6gTXSzCP3c/edit#gid=0">here</a>
-  (updated 11/19).
+  Detailed schedule with a list of talks and posters is now available <a href="https://docs.google.com/spreadsheets/d/1_P2E1PQo1-jYiQyDkf6xDvPkITI4nHvMQKSAhe5QMk4/pubhtml?gid=1406393047&single=true">here</a>
+  (updated 11/4).
   </p>
-  -->
+ 
   <h2>Getting here</h2>
   <p>
 	  The Colloquium Room is located in the Photonics Center on the 9th floor of 8 St. Mary's St. 
