--- a/necv2016.html
+++ b/necv2016.html
@@ -38,6 +38,10 @@
 
 
   <h2>Schedule</h2>
+  <p>
+  <a href="https://docs.google.com/spreadsheets/d/1_P2E1PQo1-jYiQyDkf6xDvPkITI4nHvMQKSAhe5QMk4/pubhtml?gid=1406393047&single=true">A detailed schedule with a list of talks and posters</a>
+   is now available (updated 11/4).
+  </p>
 
   <table cellpadding="4px">
     <tbody><tr> <td> 09:30 - 10:00 </td><td> Breakfast with coffee </td>
@@ -47,12 +51,7 @@
     </tr><tr> <td> 01:00 - 03:00 </td><td> Poster session (with coffee) </td>
     </tr><tr> <td> 03:00 - 05:00 </td><td> Afternoon talks </td>
   </tr></tbody></table>
-<br>
-  
-  <p>
-  Detailed schedule with a list of talks and posters is now available <a href="https://docs.google.com/spreadsheets/d/1_P2E1PQo1-jYiQyDkf6xDvPkITI4nHvMQKSAhe5QMk4/pubhtml?gid=1406393047&single=true">here</a>
-  (updated 11/4).
-  </p>
+
  
   <h2>Getting here</h2>
   <p>
