--- a/index.html
+++ b/index.html
@@ -58,14 +58,14 @@
 	<!--begin page content, edit you own page here-->
 
 	
-	    <p>Welcome to Prof. Saenko's <a href="index.html">Computer Vision and Machine Learning Group</a> 
-	      at the <a href="www.cs.uml.edu">Computer Science Department</a> of 
-	      <a href="www.uml.edu">Umass Lowell</a>. 
+	    <p>Welcome to Prof. Saenko's <a href="index.html">Computer Vision and Machine Learning Group.</a>  
 	    </p>				
 	
 	  
 	    <h2>News</h2>				
 	      <ul><big>
+		      <li> <font color="red">NEW:</font>  We are hosting the <a href="http://vision.cs.uml.edu/necv2016.html"> 2016 New England Computer Vision Workshop (NECV)</a> at Boston University.
+		      </li>
 		<li><font color="red">NEW:</font> Our paper 
 	      		<a href="http://arxiv.org/abs/1511.05234">"Ask, Attend and Answer: Exploring Question-Guided Spatial Attention for Visual Question Answering"</a>
 	      		is accepted to ECCV 2016. Here is the video spotlight:<br>
@@ -82,7 +82,7 @@
 	      	</li>
 	      	<li> <font color="red">NEW:</font> <a href="https://arxiv.org/abs/1607.01719">Deep CORAL: Correlation Alignment for Deep Domain Adaptation (Extended Abstract)</a>.
 	      	</li>
-	      	<li> <font color="red">NEW:</font> Two orals accepted to <a href="http://cvpr2016.thecvf.com/">CVPR 2016</a>: 
+	      	<li> Two orals accepted to <a href="http://cvpr2016.thecvf.com/">CVPR 2016</a>: 
 	      	<a href="http://arxiv.org/abs/1511.05284">Deep Compositional Captioning: Describing Novel Object Categories 
 	      	without Paired Training Data</a> and <a href="http://arxiv.org/abs/1511.04164">Natural Language Object Retrieval</a>.
 	      	</li>
