--- a/necv2016.html
+++ b/necv2016.html
@@ -70,7 +70,13 @@
   <h2>Organizers</h2>
   <p>
   The workshop is being organized by <a href="http://vision.cs.uml.edu/ksaenko.html">Kate Saenko</a>, <a href="http://www.cs.bu.edu/~betke/">Margrit Betke</a> and <a href="http://www.cs.bu.edu/~sclaroff/">Stan Sclaroff</a>.
-<!--  and is being sponsored by :
+  
+  <h2>Sponsors</h2>
+	
+	<a href="https://www.amazonrobotics.com/">
+        	<img src="http://www.olin.edu/sites/default/files/amazon-robotics-logo1-300x75.png" alt="Amazon Robotics" width="300" height="75" border="0">
+        </a>  
+	  <!--  and is being sponsored by :
   </p>
   <a href="https://ds.cs.umass.edu/"><img width="375" src="./New England Computer Vision Workshop, 2015_files/cics-ds.png"></a> <img width="250" src="./New England Computer Vision Workshop, 2015_files/new-google-logo.jpg">
 -->
