--- a/necv2016.html
+++ b/necv2016.html
@@ -74,7 +74,7 @@
   <h2>Sponsors</h2>
 	
 	<a href="https://www.amazonrobotics.com/">
-        	<img src="http://www.olin.edu/sites/default/files/amazon-robotics-logo1-300x75.png" alt="Amazon Robotics" width="300" height="75" border="0">
+        	<img src="http://www.olin.edu/sites/default/files/amazon-robotics-logo1-300x75.png" alt="Amazon Robotics" width="150"  border="0">
         </a>  
 	  <!--  and is being sponsored by :
   </p>
