--- a/necv2016.html
+++ b/necv2016.html
@@ -33,7 +33,7 @@
   <p> 
   Participation is free for universities (or research institutions) only; a limited number of industry spots will be made available 
 	  through sponsorship (please contact us via email). 
-  Please register <a href="https://goo.gl/forms/1AC6Bn26GiIPa0mL2">here</a> by Friday, Nov 4th if you have not already
+  <strike>Please register here by Friday, Nov 4th if you have not already</strike> (<font color="red">Registration is closed</font>)
   done so.</p>
 
 
@@ -69,12 +69,12 @@
   
   <h2>Organizers</h2>
   <p>
-  The workshop is being organized by <a href="http://vision.cs.uml.edu/ksaenko.html">Kate Saenko</a>, <a href="http://www.cs.bu.edu/~betke/">Margrit Betke</a> and <a href="http://www.cs.bu.edu/~sclaroff/">Stan Sclaroff</a>.
+  The workshop is being organized by <a href="http://vision.cs.uml.edu/ksaenko.html">Kate Saenko</a>, <a href="http://www.cs.bu.edu/~betke/">Margrit Betke</a>, <a href="http://www.cs.bu.edu/~sclaroff/">Stan Sclaroff</a> and <a href="http://cyclops.io/" title="Videoconferencing and Collaboration">Samson Timoner</a>.
   
   <h2>Sponsors</h2>
 	
 	<a href="https://www.amazonrobotics.com/">
-        	<img src="http://www.olin.edu/sites/default/files/amazon-robotics-logo1-300x75.png" alt="Amazon Robotics" width="150"  border="0">
+        	<img src="http://www.olin.edu/sites/default/files/amazon-robotics-logo1-300x75.png" alt="Amazon Robotics" width="200"  border="0">
         </a>  
 	  <!--  and is being sponsored by :
   </p>
