--- a/necv2016.html
+++ b/necv2016.html
@@ -33,8 +33,7 @@
   <p> 
   Participation is free for universities (or research institutions) only; a limited number of industry spots will be made available 
 	  through sponsorship (please contact us via email). 
-  <strike>Please register here by Friday, Nov 4th if you have not already</strike> (<font color="red">Registration is closed</font>)
-  done so.</p>
+  <strike>Please register here by Friday, Nov 4th if you have not already done so.</strike> <font color="red">(Registration is closed!)</font></p>
 
 
   <h2>Schedule</h2>
