--- a/necv2016.html
+++ b/necv2016.html
@@ -75,8 +75,14 @@
 	<a href="https://www.amazonrobotics.com/">
         	<img src="http://www.olin.edu/sites/default/files/amazon-robotics-logo1-300x75.png" alt="Amazon Robotics" width="200"  border="0">
         </a>  
+	
+	<h2>Parking</h2>
+There are parking lots available at <font color='blue'>665 Commonwealth Avenue</font> and <font color='blue'>549 Commonwealth Avenue</font>. These are pay-on-entry lots, and more information including maps and prices can be found at <a href = 'https://www.bu.edu/parking/lots-locations/family-guests-and-visitor-parking/'>Boston Univeristy Parking</a>.
 	  <!--  and is being sponsored by :
   </p>
+
+
+
   <a href="https://ds.cs.umass.edu/"><img width="375" src="./New England Computer Vision Workshop, 2015_files/cics-ds.png"></a> <img width="250" src="./New England Computer Vision Workshop, 2015_files/new-google-logo.jpg">
 -->
   
