--- a/necv2016.html
+++ b/necv2016.html
@@ -39,7 +39,7 @@
   <h2>Schedule</h2>
   <p>
   <a href="https://docs.google.com/spreadsheets/d/1_P2E1PQo1-jYiQyDkf6xDvPkITI4nHvMQKSAhe5QMk4/pubhtml?gid=1406393047&single=true">A detailed schedule with a list of talks and posters</a>
-   is now available (updated 11/4).
+   is now available (updated 11/21). The abstract booklet is coming soon.
   </p>
 
   <table cellpadding="4px">
@@ -65,15 +65,17 @@
   <p>If you plan to come a day ahead, or want to stay an extra day, there are many lodging options in the Boston area.
   </p>
   
+	<h2>Parking</h2>
+	<p>There are parking lots available at <font color='blue'>665 Commonwealth Avenue</font> and <font color='blue'>
+	549 Commonwealth Avenue</font>. These are pay-on-entry lots, and more information including maps and prices can 
+	be found at <a href = 'https://www.bu.edu/parking/lots-locations/family-guests-and-visitor-parking/'>Boston 
+	Univeristy Parking</a>.
+	</p>	
   
   <h2>Organizers</h2>
   <p>
   The workshop is being organized by <a href="http://vision.cs.uml.edu/ksaenko.html">Kate Saenko</a>, <a href="http://www.cs.bu.edu/~betke/">Margrit Betke</a>, <a href="http://www.cs.bu.edu/~sclaroff/">Stan Sclaroff</a> and <a href="http://cyclops.io/" title="Videoconferencing and Collaboration">Samson Timoner</a>.
   
-
-	
-	<h2>Parking</h2>
-There are parking lots available at <font color='blue'>665 Commonwealth Avenue</font> and <font color='blue'>549 Commonwealth Avenue</font>. These are pay-on-entry lots, and more information including maps and prices can be found at <a href = 'https://www.bu.edu/parking/lots-locations/family-guests-and-visitor-parking/'>Boston Univeristy Parking</a>.
 	
 	<h2>Sponsors</h2>
 	
