--- a/necv2016.html
+++ b/necv2016.html
@@ -18,16 +18,18 @@
 </div>
 
 <div id="content">
-  <h2>Overview</h2>
+<p>The <a href="http://people.cs.umass.edu/~smaji/nevm2015/">2015 New England Computer Vision Workshop </a>, was held at UMass Amherst.</p> 
+
+<h2>Overview</h2>
   <p>
-  Welcome to the second New England Computer Vision Workshop to be held at Boston University. 
+  Welcome to the 2016 New England Computer Vision Workshop, to be held at Boston University.
   This event brings together researchers in computer
   vision and related areas for an informal exchange of ideas through a full day of
   presentations and posters.
   </p>
-  <p>
-  We are expecting around 75 people from various universities and
-  industries in the New England area. 
+	<p>
+  We have around 100 people attending from various universities and
+  industry research labs in the New England area. 
 </p>
   
   <p> 
@@ -39,7 +41,7 @@
   <h2>Schedule</h2>
   <p>
   <a href="https://docs.google.com/spreadsheets/d/1_P2E1PQo1-jYiQyDkf6xDvPkITI4nHvMQKSAhe5QMk4/pubhtml?gid=1406393047&single=true">A detailed schedule with a list of talks and posters</a>
-   is now available (updated 11/21). The abstract booklet is coming soon.
+   is now available (updated 11/21). 
   </p>
 
   <table cellpadding="4px">
