--- a/necv2016.html
+++ b/necv2016.html
@@ -18,7 +18,7 @@
 </div>
 
 <div id="content">
-<p>The <a href="http://people.cs.umass.edu/~smaji/nevm2015/">2015 New England Computer Vision Workshop </a>, was held at UMass Amherst.</p> 
+<p>The <a href="http://people.cs.umass.edu/~smaji/nevm2015/">2015 New England Computer Vision Workshop</a> was held at UMass Amherst.</p> 
 
 <h2>Overview</h2>
   <p>
@@ -85,17 +85,9 @@
         	<img src="http://www.olin.edu/sites/default/files/amazon-robotics-logo1-300x75.png" alt="Amazon Robotics" width="200"  border="0">
         </a>  
 	
-	<!--  and is being sponsored by :
-  
-
-
-</p>
-
-
-
-  <a href="https://ds.cs.umass.edu/"><img width="375" src="./New England Computer Vision Workshop, 2015_files/cics-ds.png"></a> <img width="250" src="./New England Computer Vision Workshop, 2015_files/new-google-logo.jpg">
--->
-  
+ <h2>Photos</h2>
+ 	
+<img src="./necv2016.jpg" alt="NECV 2016" width="200"  border="0">  
 </div>
 
 
