--- a/index.html
+++ b/index.html
@@ -118,7 +118,8 @@ Slides from Kate's lecture at the <a href="">Microsoft Machine Learning and Inte
 		  <a href="./projects.html#data">DeCAF features</a> that achieve the state of the art on the Office domain adaptation dataset are now available for download.
 		</li>
 	    <li> I am co-chair of the <a href="http://www.cvc.uab.es/adas/task-cv2014">TASK-CV Workshop on Transferring and Adapting Source Knowledge in Computer Vision</a>, co-located with ECCV2014.</li>
-	    <li>Kate Saenko will be giving a <a href="http://www.cvpr2012.org/tutorials">tutorial</a><a href="http://www.cvpr2012.org/tutorials"> at CVPR 2012</a> on Domain Transfer Learning for Vision Applications with Dong Xu and Ivor Tsang.</li>
+	    <li>Kate Saenko will be giving a <a href="http://citeseerx.ist.psu.edu/viewdoc/download?doi=10.1.1.360.3572&rep=rep1&type=pdf">tutorial on Domain Transfer Learning for Vision Applications</a> at 
+		    <a href="http://tab.computer.org/pamitc/archive/cvpr2012/program-details/tutorials.html"> CVPR 2012</a> with Dong Xu and Ivor Tsang.</li>
 	    <li> I am co-organizing the <a href="http://nips.cc/Conferences/2011/Program/event.php?ID=2539"> Workshop on Integrating Language and Vision</span></a>, held at NIPS 2011 in Grenada, Spain.</li>
 	      </big></ul>
 
