Added Project Page for CORAL

--- a/research.html
+++ b/research.html
@@ -108,11 +108,14 @@
 			<br>
 			<em>The Thirtieth AAAI Conference on Artificial Intelligence, 2016 (AAAI-16)</em>
 			<br>
-			<em><font color="red">Best Paper Prize</font> of TASK-CV workshop at ICCV'15</em>
+			<em>Deep CORAL: <font color="red">Honorable Mention Paper</font> of TASK-CV workshop at ECCV'16</em>
+			<em>CORAL: <font color="red">Best Paper Prize</font> of TASK-CV workshop at ICCV'15</em>
 			<br>
 			  <span class="links">
+			  <a href="https://github.com/VisionLearningGroup/CORAL">Project Website</a>
 		          <a href="http://arxiv.org/abs/1511.05547">CORAL</a>
                           <a href="https://arxiv.org/abs/1607.01719">Deep CORAL</a>
+			  <a href="https://arxiv.org/abs/1612.01939">CORAL Framework</a>  
 		</p>
    		<br><br><br><br>
 	</div>
