updates link to ramanishka's webpage

--- a/people.html
+++ b/people.html
@@ -65,7 +65,7 @@
 		<td><a href="http://www.cs.uml.edu/~bsun/"><img class="personal" src="images/bsun.jpg"/></a></td> 
 		<td><a href="xpeng.html"><img class="personal" src="images/default.png"/></a></td> 
 		<td><a href="http://cs-people.bu.edu/hxu/"><img class="personal" src="images/huijuanxu.jpg"/></a></td> 
-		<td><a href="ramanishka.html"><img class="personal" src="images/default.png"/></a></td> 
+		<td><a href="http://cs-people.bu.edu/vram/"><img class="personal" src="images/vramanishka.jpg"/></a></td> 
 		<td><a href="#"><img class="personal" src="images/ben.jpg"/></a></td> 
 	      </tr>
 	      <tr>
