--- a/index.html
+++ b/index.html
@@ -64,23 +64,28 @@
 	  
 	    <h2>News</h2>				
 	      <ul><big>
+		      Slides from Kate's talk at the <a href="https://sites.google.com/site/nips2016intelligenttrans/schedule">NIPS 2016 workshop on Machine Learning for Intelligent 
+		      Transportation Systems</a> on December 9,  
+		      <a href="https://drive.google.com/file/d/0B4IapRTv9pJ1czJkQUpMSWpLSVU/view">Domain Adaptation for Perception and Action.</a>
+		      
 		      <li> <font color="red">NEW:</font>  We are hosting the <a href="http://vision.cs.uml.edu/necv2016.html"> 2016 New England Computer Vision Workshop (NECV)</a> at Boston University.
 		      </li>
-		<li><font color="red">NEW:</font> Our paper 
+		<li>Our paper 
 	      		<a href="http://arxiv.org/abs/1511.05234">"Ask, Attend and Answer: Exploring Question-Guided Spatial Attention for Visual Question Answering"</a>
-	      		is accepted to ECCV 2016. Here is the video spotlight:<br>
+	      		is accepted to ECCV 2016. Here is the video spotlight:<br><br>
 	      		<iframe width="640" height="480" src="https://www.youtube.com/embed/FjpRwVKYJQ8?rel=0" frameborder="0" allowfullscreen></iframe>
 	      	</li>
-	        <li><font color="red">NEW:</font> Our paper titled with "Combining Texture and Shape Cues for Object Detection with Minimal Supervision" was accepted to ACCV-16.
+	        <li>Our paper <a href="https://arxiv.org/abs/1609.04356">Combining Texture and Shape Cues for Object Detection with 
+			Minimal Supervision</a> was accepted to ACCV-16.
 	      	</li>
-	      	<li><font color="red">NEW:</font> Our paper titled with 
+	      	<li>Our paper   
 	      		<a href="https://arxiv.org/abs/1605.06695">"Fine-to-coarse Knowledge Transfer For Low-Res Image Classification"</a>
 	      		was accepted to ICIP-16.
 	      	</li>
-	      	<li> <font color="red">Moving to Boston University</font> Kate has recently accepted an Assistant Professor position in the 
+	      	<li> <font color="red">Moving to Boston University</font> Kate has accepted an Assistant Professor position in the 
 	      	<a href="http://www.bu.edu/cs/">Computer Science Department</a> at <a href="http://www.bu.edu/">Boston University</a>, and will be moving this summer, along with her group. Stay tuned for the new website.
 	      	</li>
-	      	<li> <font color="red">NEW:</font> <a href="https://arxiv.org/abs/1607.01719">Deep CORAL: Correlation Alignment for Deep Domain Adaptation (Extended Abstract)</a>.
+	      	<li> <a href="https://arxiv.org/abs/1607.01719">Deep CORAL: Correlation Alignment for Deep Domain Adaptation (Extended Abstract)</a>.
 	      	</li>
 	      	<li> Two orals accepted to <a href="http://cvpr2016.thecvf.com/">CVPR 2016</a>: 
 	      	<a href="http://arxiv.org/abs/1511.05284">Deep Compositional Captioning: Describing Novel Object Categories 
