Added TASK-CV 2016 Award

--- a/index.html
+++ b/index.html
@@ -70,6 +70,8 @@
 		      
 		      <li> <font color="red">NEW:</font>  We are hosting the <a href="http://vision.cs.uml.edu/necv2016.html"> 2016 New England Computer Vision Workshop (NECV)</a> at Boston University.
 		      </li>
+		      <li>  Our paper titled Deep CORAL: Correlation Alignment for Deep Domain Adaptation has won the <a href="/pubs/awardTASCK-CV2016.pdf"> <font color="red">Honorable Mention Paper</font></a> of the TASK-CV workshop at ECCV'2016.
+		</li>
 		<li>Our paper 
 	      		<a href="http://arxiv.org/abs/1511.05234">"Ask, Attend and Answer: Exploring Question-Guided Spatial Attention for Visual Question Answering"</a>
 	      		is accepted to ECCV 2016. Here is the video spotlight:<br><br>
