--- a/ksaenko.html
+++ b/ksaenko.html
@@ -60,28 +60,13 @@
 	  <div class="container">
 	    <h2>Professor Kate Saenko</h2>
 	    <img src="images/kate.gif" width="100" height="100"/>	    
-	      <p><a href="pubs/saenkoCV.pdf">Curriculum Vitae</a>
+		      <p>I have moved to the 
+	      	<a href="http://www.bu.edu/cs/">Computer Science Department</a> at <a href="http://www.bu.edu/">
+		      Boston University</a>. Please see my <a href="http://ai.bu.edu/ksaenko.html">new webpage</a>.
 	      </p>
-	      <p><font color="red">NEWS:</font> I am joining the 
-	      	<a href="http://www.bu.edu/cs/">Computer Science Department</a> at <a href="http://www.bu.edu/">Boston University</a> as Assistant Professor this summer!
-	      </p>
-	    <p>I am an Assistant Professor at the <a href="http://www.cs.uml.edu">Computer Science Department at UMass Lowell</a>, 
-	    and the director of the <a href="http://vision.cs.uml.edu">Computer Vision and Learning Group at UMass Lowell</a>. 
-	    Previously, I was a Postdoctoral Researcher at the<a href="http://www.icsi.berkeley.edu/"> International Computer Science Institute</a>, a Visiting Scholar at <a href="http://www.eecs.berkeley.edu/">UC Berkeley EECS</a> and a Visiting Postdoctoral Fellow in the <a href="http://www.seas.harvard.edu/">School of Engineering and Applied Science</a> at Harvard University. My research interests are in applications of machine learning to image and language understanding, multimodal perception for autonomous systems, and adaptive intelligent human-computer interfaces.
-	    </p>
+	    
 
       
-<!--
-	      <h2>Synergistic Activities</h2>
-		<li> Co-chair of the <a href="http://www.cvc.uab.es/adas/task-cv2014">TASK-CV Workshop on Transferring and Adapting Source Knowledge in Computer Vision</a>, co-located with ECCV2014.
-	      </li>
-	      <li>Organizer of the <a href="http://www.cvpr2012.org/tutorials">tutorial</a><a href="http://www.cvpr2012.org/tutorials"> at CVPR 2012</a>&nbsp;on&nbsp;Domain Transfer Learning for Vision Applications with Dong Xu and Ivor Tsang.
-	      </li>
-	      <li>Organizer of the<span style="font-weight: bold;"></span>&nbsp;<a href="http://nips.cc/Conferences/2011/Program/event.php?ID=2539"><span style="font-weight: bold;">Workshop on Integrating Language and Vision</span></a>, held at NIPS 2011 in
-Grenada, Spain.
-	      </li>
-	    </ul>
--->
 	  </div>
 	</div>
 
